src/Components/Game/Game.scss
@import '../App/App.scss';

.single-pokemon {
  height: 35vh;
  filter: brightness(0%);
  -webkit-user-drag: none;
  margin: 0px;
}

.visible {
  filter: none;
}

.choices {
    align-self: flex-end;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.pokemon-button {
  border: 3px solid #1e65a7;
  @include pixelate(3px, #3d7dca, #1e65a7);
  cursor: pointer;
  color: white;
  text-shadow: 2px 2px 2px black;
  font-size: 18px;
  font-weight: 700;
  height: 5vh;
  width: 43%;
  margin: 2%;
  box-shadow: 2px 2px 3px grey;
}

.tile-holder {
  display: flex;
  justify-content: space-between;
}

.tile-font {
  font-size: 1.4em;
}

@media screen and (min-width: 1310px){
  
.tile-holder {
  display: flex;
  justify-content: space-around;
}

.choices {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-self: center;
}

.feedback-tile {
  font-size: 13px;
}

}

